--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+:root {
+  --primary-color: #64ffda;
+  --secondary-color: #101a27;
+  --secondary-color2: #16243a;
+  --white: #fff;
+  --primary-text-color:  #ccd6f6;
+  --secondary-text-color: #8892b0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,3 +20,4 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
