Added Final Version

--- a/src/Components/HeadSection/HeadSection.css
+++ b/src/Components/HeadSection/HeadSection.css
@@ -8,6 +8,7 @@
     background-color: transparent;
     border: 2px solid var(--primary-color);
     color: var(--primary-color);
+    cursor: pointer;
 }
 
 .headSectionLink{
