--- a/src/Pages/Bucket/Bucket.css
+++ b/src/Pages/Bucket/Bucket.css
@@ -1,9 +1,9 @@
-.HomeContainer{
+.BucketContainer{
     display: flex;
     width: 100%;
-    min-height: 100vh;
+    height: 100vh;
 }
-.rightHomeSection{
+.rightBucketSection{
     background-color:var(--secondary-color2);
     flex: 1;
     padding: 64px;
@@ -14,19 +14,9 @@
     flex-wrap: wrap;
     justify-content:space-around;
 }
-.createButton{
-    padding: 8px 16px;
-    background-color: var(--primary-color);
-    border: none;
-    margin-top: 16px;
-    float: right;
-    font-size: 18px;
-    border-radius: 8px;
-    cursor: pointer;
-}
 
 @media only screen and (max-width: 768px){
-    .rightHomeSection{
+    .rightBucketSection{
         padding: 16px;
         padding-bottom: 64px;
     }
